// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppNavContainer > matches snapshot (authenticated) 1`] = `
<nav
  class="AppNavRoot-sc-49dfo2-0 jUpyVm"
>
  <div
    class="AppNavMain-sc-49dfo2-1 cZgbMa"
  >
    <a
      class="AppNavLink-sc-49dfo2-4 ioDkji"
      data-discover="true"
      href="/home"
    >
      Главная
    </a>
    <a
      class="AppNavLink-sc-49dfo2-4 ioDkji"
      data-discover="true"
      href="/admin"
    >
      Админка
    </a>
    <a
      class="AppNavLink-sc-49dfo2-4 ioDkji"
      data-discover="true"
      href="/history"
    >
      История
    </a>
  </div>
  <div
    class="AppNavAuth-sc-49dfo2-2 hDFGYZ"
  >
    <span
      class="AppNavUserLabel-sc-49dfo2-3 ihQXTR"
    >
      alex
    </span>
    <button
      class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_1_ ant-btn-link ant-btn-color-link ant-btn-variant-link ButtonStyled-sc-49dfo2-5 kFPXuF"
      type="button"
    >
      <span>
        Выйти
      </span>
    </button>
  </div>
</nav>
`;

exports[`AppNavContainer > matches snapshot (guest) 1`] = `
<nav
  class="AppNavRoot-sc-49dfo2-0 jUpyVm"
>
  <div
    class="AppNavMain-sc-49dfo2-1 cZgbMa"
  />
  <div
    class="AppNavAuth-sc-49dfo2-2 hDFGYZ"
  >
    <a
      class="AppNavLink-sc-49dfo2-4 ioDkji"
      data-discover="true"
      href="/login"
    >
      Вход
    </a>
    <a
      class="AppNavLink-sc-49dfo2-4 ioDkji"
      data-discover="true"
      href="/register"
    >
      Регистрация
    </a>
  </div>
</nav>
`;

exports[`AppNavContainer > matches snapshot (loading hides auth actions) 1`] = `
<nav
  class="AppNavRoot-sc-49dfo2-0 jUpyVm"
>
  <div
    class="AppNavMain-sc-49dfo2-1 cZgbMa"
  />
  <div
    class="AppNavAuth-sc-49dfo2-2 hDFGYZ"
  />
</nav>
`;
